// Vitest Snapshot v1

exports[`attributify > extractor1 1`] = `
Set {
  "[uno-layer-base~=\\"c-white/10\\"]",
  "[uno-layer-base~=\\"hover:c-black/20\\"]",
  "[sm~=\\"[color:red]\\"]",
  "[md~=\\"[--var:var(--another)]\\"]",
  "[lg~=\\"bg-blue-600\\"]",
  "absolute",
  "fixed",
  "[important~=\\"text-red\\"]",
  "[important~=\\"bg-red\\"]",
  "[bg~=\\"blue-400\\"]",
  "[bg~=\\"hover:blue-500\\"]",
  "[bg~=\\"dark:!blue-500\\"]",
  "[bg~=\\"dark:hover:blue-600\\"]",
  "[text~=\\"sm\\"]",
  "[text~=\\"white\\"]",
  "[!leading-4=\\"\\"]",
  "[flex~=\\"!~\\"]",
  "[flex~=\\"col\\"]",
  "[p~=\\"t-2\\"]",
  "[pt~=\\"2\\"]",
  "[border~=\\"rounded-xl\\"]",
  "[border~=\\"x-1\\"]",
  "[border~=\\"x-style-dashed\\"]",
  "[font~=\\"mono\\"]",
  "[font~=\\"sans\\"]",
  "[p~=\\"y-2\\"]",
  "[p~=\\"x-4\\"]",
  "[border~=\\"2\\"]",
  "[border~=\\"rounded\\"]",
  "[border~=\\"blue-200\\"]",
  "[un-children~=\\"m-auto\\"]",
  "[pt2=\\"\\"]",
  "[rounded-sm=\\"\\"]",
  "[inline-block=\\"\\"]",
  "[transform=\\"\\"]",
  "[translate-x-100%=\\"\\"]",
  "[translate-y-=\\"\\"]",
  "[%=\\"\\"]",
  "[rotate-30=\\"\\"]",
  "[after~=\\"content-[quoted:uno_css]\\"]",
  "[rotate-60=\\"\\"]",
  "[ma=\\"\\"]",
  "[m~=\\"1\\"]",
  "[m~=\\"2\\"]",
  "[m~=\\"3\\"]",
  "[ml-1.5=\\"\\"]",
  "[ml-1..6=\\"\\"]",
}
`;

exports[`attributify > extractor2 1`] = `
Set {
  "[h-80=\\"\\"]",
  "[text-center=\\"\\"]",
  "[flex=\\"\\"]",
  "[flex-col=\\"\\"]",
  "[align-center=\\"\\"]",
  "[select-none=\\"\\"]",
  "[all:transition-400=\\"\\"]",
  "[type~=\\"checkbox\\"]",
  "[peer=\\"\\"]",
  "[mt-a=\\"\\"]",
  "[mb-a=\\"\\"]",
  "[group=\\"\\"]",
  "[peer-checked~=\\"text-4xl\\"]",
  "[font-100=\\"\\"]",
  "[text-4xl=\\"\\"]",
  "[mb--3=\\"\\"]",
  "[p-10=\\"\\"]",
  "[bg-gradient~=\\"to-r\\"]",
  "[bg-gradient~=\\"from-yellow-400\\"]",
  "[bg-gradient~=\\"via-red-500\\"]",
  "[bg-gradient~=\\"to-pink-500\\"]",
  "[text-5xl=\\"\\"]",
  "[sm~=\\"bg-blue-600\\"]",
  "[op-20=\\"\\"]",
  "[font-200=\\"\\"]",
  "[mt-1=\\"\\"]",
  "[tracking-wider=\\"\\"]",
  "[group-hover~=\\"text-teal-400\\"]",
  "[group-hover~=\\"op-50\\"]",
  "[ma=\\"\\"]",
  "[inline-flex=\\"\\"]",
  "[relative=\\"\\"]",
  "[h-14=\\"\\"]",
  "[type~=\\"text\\"]",
  "[m-0=\\"\\"]",
  "[pt-4=\\"\\"]",
  "[px-4=\\"\\"]",
  "[text-true-gray-800=\\"\\"]",
  "[un-placeholder~=\\"text-red\\"]",
  "[absolute=\\"\\"]",
  "[leading-1rem=\\"\\"]",
  "[left-4=\\"\\"]",
  "[pointer-events-none=\\"\\"]",
  "[text-gray-7=\\"\\"]",
  "[top~=\\"1/3\\"]",
  "[transition~=\\"200\\"]",
  "[transition~=\\"linear\\"]",
  "[peer-not-placeholder-shown~=\\"-translate-y-4\\"]",
  "[peer-not-placeholder-shown~=\\"scale-75\\"]",
  "[peer-not-placeholder-shown~=\\"origin-top-left\\"]",
  "[peer-not-placeholder-shown~=\\"text-green-500\\"]",
  "[peer-focus~=\\"-translate-y-4\\"]",
  "[peer-focus~=\\"scale-75\\"]",
  "[peer-focus~=\\"origin-top-left\\"]",
  "[peer-focus~=\\"text-green-500\\"]",
  "[before-content~=\\"[quoted:!]\\"]",
  "[after~=\\"content-[string:!]\\"]",
}
`;

exports[`attributify > extractor4 1`] = `
Set {
  "[uno-layer-base~=\\"c-white/10\\"]",
  "[uno-layer-base~=\\"hover:c-black/20\\"]",
  "[sm~=\\"[color:red]\\"]",
  "[md~=\\"[--var:var(--another)]\\"]",
  "[lg~=\\"bg-blue-600\\"]",
  "absolute",
  "fixed",
  "[important~=\\"text-red\\"]",
  "[important~=\\"bg-red\\"]",
  "[bg~=\\"sky-400\\"]",
  "[bg~=\\"hover:sky-500\\"]",
  "[bg~=\\"transparent\\"]",
  "[font~=\\"mono\\"]",
  "[font~=\\"sans\\"]",
  "[bg~=\\"blue-400\\"]",
  "[bg~=\\"hover:blue-500\\"]",
  "[bg~=\\"dark:!blue-500\\"]",
  "[bg~=\\"dark:hover:blue-600\\"]",
  "[text~=\\"sm\\"]",
  "[text~=\\"white\\"]",
  "[flex~=\\"!~\\"]",
  "[flex~=\\"col\\"]",
  "[p~=\\"t-2\\"]",
  "[pt~=\\"2\\"]",
  "[border~=\\"rounded-xl\\"]",
  "[border~=\\"x-1\\"]",
  "[border~=\\"x-style-dashed\\"]",
  "[border~=\\"2\\"]",
  "[border~=\\"rounded\\"]",
  "[border~=\\"blue-200\\"]",
  "[un-children~=\\"m-auto\\"]",
  "[pt2=\\"\\"]",
  "[rounded-sm=\\"\\"]",
  "[inline-block=\\"\\"]",
  "[transform=\\"\\"]",
  "[translate-x-100=\\"\\"]",
  "[rotate-30=\\"\\"]",
  "[after~=\\"content-[quoted:uno-css]\\"]",
  "[rotate-60=\\"\\"]",
  "[ma=\\"\\"]",
  "[m~=\\"1\\"]",
  "[m~=\\"2\\"]",
  "[m~=\\"3\\"]",
  "[ml-1.5=\\"\\"]",
}
`;

exports[`attributify > fixture1 1`] = `
"/* layer: base */
[uno-layer-base~=\\"c-white\\\\/10\\"]{color:rgba(255,255,255,0.1);}
[uno-layer-base~=\\"hover\\\\:c-black\\\\/20\\"]:hover{color:rgba(0,0,0,0.2);}
/* layer: default */
.absolute{position:absolute;}
.fixed{position:fixed;}
[m~=\\"\\\\31 \\"]{margin:0.25rem;}
[m~=\\"\\\\32 \\"]{margin:0.5rem;}
[m~=\\"\\\\33 \\"]{margin:0.75rem;}
[ma=\\"\\"],
[un-children~=\\"m-auto\\"]>*{margin:auto;}
[ml-1\\\\.5=\\"\\"]{margin-left:0.375rem;}
[inline-block=\\"\\"]{display:inline-block;}
[flex~=\\"\\\\!\\\\~\\"]{display:flex !important;}
[flex~=\\"col\\"]{flex-direction:column;}
[translate-x-100\\\\%=\\"\\"]{--un-translate-x:100%;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[rotate-30=\\"\\"]{--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-rotate:30deg;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[rotate-60=\\"\\"]{--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-rotate:60deg;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[transform=\\"\\"]{transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[border~=\\"\\\\32 \\"]{border-width:2px;border-style:solid;}
[border~=\\"x-1\\"]{border-left-width:1px;border-right-width:1px;border-left-style:solid;border-right-style:solid;}
[border~=\\"blue-200\\"]{--un-border-opacity:1;border-color:rgba(191,219,254,var(--un-border-opacity));}
[border~=\\"rounded-xl\\"]{border-radius:0.75rem;}
[border~=\\"rounded\\"]{border-radius:0.25rem;}
[rounded-sm=\\"\\"]{border-radius:0.125rem;}
[border~=\\"x-style-dashed\\"]{border-left-style:dashed;border-right-style:dashed;}
.dark [bg~=\\"dark\\\\:\\\\!blue-500\\"]{--un-bg-opacity:1 !important;background-color:rgba(59,130,246,var(--un-bg-opacity)) !important;}
.dark [bg~=\\"dark\\\\:hover\\\\:blue-600\\"]:hover{--un-bg-opacity:1;background-color:rgba(37,99,235,var(--un-bg-opacity));}
[bg~=\\"blue-400\\"]{--un-bg-opacity:1;background-color:rgba(96,165,250,var(--un-bg-opacity));}
[bg~=\\"hover\\\\:blue-500\\"]:hover{--un-bg-opacity:1;background-color:rgba(59,130,246,var(--un-bg-opacity));}
[important~=\\"bg-red\\"]{--un-bg-opacity:1 !important;background-color:rgba(248,113,113,var(--un-bg-opacity)) !important;}
[p~=\\"x-4\\"]{padding-left:1rem;padding-right:1rem;}
[p~=\\"y-2\\"]{padding-top:0.5rem;padding-bottom:0.5rem;}
[p~=\\"t-2\\"],
[pt~=\\"\\\\32 \\"],
[pt2=\\"\\"]{padding-top:0.5rem;}
[font~=\\"mono\\"]{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,\\"Liberation Mono\\",\\"Courier New\\",monospace;}
[font~=\\"sans\\"]{font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\";}
[text~=\\"sm\\"]{font-size:0.875rem;line-height:1.25rem;}
[\\\\!leading-4=\\"\\"]{line-height:1rem !important;}
[important~=\\"text-red\\"]{--un-text-opacity:1 !important;color:rgba(248,113,113,var(--un-text-opacity)) !important;}
[text~=\\"white\\"]{--un-text-opacity:1;color:rgba(255,255,255,var(--un-text-opacity));}
[after~=\\"content-\\\\[quoted\\\\:uno_css\\\\]\\"]::after{content:\\"uno css\\";}
@media (min-width: 640px){
[sm~=\\"\\\\[color\\\\:red\\\\]\\"]{color:red;}
}
@media (min-width: 768px){
[md~=\\"\\\\[--var\\\\:var\\\\(--another\\\\)\\\\]\\"]{--var:var(--another);}
}
@media (min-width: 1024px){
[lg~=\\"bg-blue-600\\"]{--un-bg-opacity:1;background-color:rgba(37,99,235,var(--un-bg-opacity));}
}"
`;

exports[`attributify > fixture2 1`] = `
"/* layer: default */
[pointer-events-none=\\"\\"]{pointer-events:none;}
[absolute=\\"\\"]{position:absolute;}
[relative=\\"\\"]{position:relative;}
[left-4=\\"\\"]{left:1rem;}
[top~=\\"\\\\31 \\\\/3\\"]{top:33.3333333333%;}
[m-0=\\"\\"]{margin:0rem;}
[ma=\\"\\"]{margin:auto;}
[mb--3=\\"\\"]{margin-bottom:-0.75rem;}
[mb-a=\\"\\"]{margin-bottom:auto;}
[mt-1=\\"\\"]{margin-top:0.25rem;}
[mt-a=\\"\\"]{margin-top:auto;}
[h-14=\\"\\"]{height:3.5rem;}
[h-80=\\"\\"]{height:20rem;}
[flex=\\"\\"]{display:flex;}
[inline-flex=\\"\\"]{display:inline-flex;}
[flex-col=\\"\\"]{flex-direction:column;}
[peer=\\"\\"]:focus~[peer-focus~=\\"origin-top-left\\"],
[peer=\\"\\"]:not(:placeholder-shown)~[peer-not-placeholder-shown~=\\"origin-top-left\\"]{transform-origin:top left;}
[peer=\\"\\"]:focus~[peer-focus~=\\"-translate-y-4\\"],
[peer=\\"\\"]:not(:placeholder-shown)~[peer-not-placeholder-shown~=\\"-translate-y-4\\"]{--un-translate-y:-1rem;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[peer=\\"\\"]:focus~[peer-focus~=\\"scale-75\\"],
[peer=\\"\\"]:not(:placeholder-shown)~[peer-not-placeholder-shown~=\\"scale-75\\"]{--un-scale-x:0.75;--un-scale-y:0.75;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[select-none=\\"\\"]{user-select:none;}
[bg-gradient~=\\"from-yellow-400\\"]{--un-gradient-from:rgba(250,204,21,var(--un-from-opacity, 1));--un-gradient-to:rgba(250,204,21,0);--un-gradient-stops:var(--un-gradient-from), var(--un-gradient-to);}
[bg-gradient~=\\"via-red-500\\"]{--un-gradient-to:rgba(239,68,68,0);--un-gradient-stops:var(--un-gradient-from), rgba(239,68,68,var(--un-via-opacity, 1)), var(--un-gradient-to);}
[bg-gradient~=\\"to-pink-500\\"]{--un-gradient-to:rgba(236,72,153,var(--un-to-opacity, 1));}
[bg-gradient~=\\"to-r\\"]{--un-gradient-shape:to right;--un-gradient:var(--un-gradient-shape), var(--un-gradient-stops);background-image:linear-gradient(var(--un-gradient));}
[p-10=\\"\\"]{padding:2.5rem;}
[px-4=\\"\\"]{padding-left:1rem;padding-right:1rem;}
[pt-4=\\"\\"]{padding-top:1rem;}
[text-center=\\"\\"]{text-align:center;}
[peer=\\"\\"]:checked~[peer-checked~=\\"text-4xl\\"],
[text-4xl=\\"\\"]{font-size:2.25rem;line-height:2.5rem;}
[text-5xl=\\"\\"]{font-size:3rem;line-height:1;}
[font-100=\\"\\"]{font-weight:100;}
[font-200=\\"\\"]{font-weight:200;}
[leading-1rem=\\"\\"]{line-height:1rem;}
[tracking-wider=\\"\\"]{letter-spacing:0.05em;}
[group=\\"\\"]:hover [group-hover~=\\"text-teal-400\\"]{--un-text-opacity:1;color:rgba(45,212,191,var(--un-text-opacity));}
[peer=\\"\\"]:focus~[peer-focus~=\\"text-green-500\\"],
[peer=\\"\\"]:not(:placeholder-shown)~[peer-not-placeholder-shown~=\\"text-green-500\\"]{--un-text-opacity:1;color:rgba(34,197,94,var(--un-text-opacity));}
[text-gray-7=\\"\\"]{--un-text-opacity:1;color:rgba(55,65,81,var(--un-text-opacity));}
[text-true-gray-800=\\"\\"]{--un-text-opacity:1;color:rgba(38,38,38,var(--un-text-opacity));}
[un-placeholder~=\\"text-red\\"]::placeholder{--un-text-opacity:1;color:rgba(248,113,113,var(--un-text-opacity));}
[group=\\"\\"]:hover [group-hover~=\\"op-50\\"]{opacity:0.5;}
[op-20=\\"\\"]{opacity:0.2;}
[all\\\\:transition-400=\\"\\"] *{transition-property:color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:400ms;}
[transition~=\\"\\\\32 00\\"]{transition-property:color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:200ms;}
[after~=\\"content-\\\\[string\\\\:\\\\!\\\\]\\"]::after{content:!;}
[before-content~=\\"\\\\[quoted\\\\:\\\\!\\\\]\\"]::before{content:\\"!\\";}
@media (min-width: 640px){
[sm~=\\"bg-blue-600\\"]{--un-bg-opacity:1;background-color:rgba(37,99,235,var(--un-bg-opacity));}
}"
`;

exports[`attributify > fixture4 1`] = `
"/* layer: base */
[uno-layer-base~=\\"c-white\\\\/10\\"]{color:rgba(255,255,255,0.1);}
[uno-layer-base~=\\"hover\\\\:c-black\\\\/20\\"]:hover{color:rgba(0,0,0,0.2);}
/* layer: default */
.absolute{position:absolute;}
.fixed{position:fixed;}
[m~=\\"\\\\31 \\"]{margin:0.25rem;}
[m~=\\"\\\\32 \\"]{margin:0.5rem;}
[m~=\\"\\\\33 \\"]{margin:0.75rem;}
[ma=\\"\\"],
[un-children~=\\"m-auto\\"]>*{margin:auto;}
[ml-1\\\\.5=\\"\\"]{margin-left:0.375rem;}
[inline-block=\\"\\"]{display:inline-block;}
[flex~=\\"\\\\!\\\\~\\"]{display:flex !important;}
[flex~=\\"col\\"]{flex-direction:column;}
[translate-x-100=\\"\\"]{--un-translate-x:25rem;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[rotate-30=\\"\\"]{--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-rotate:30deg;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[rotate-60=\\"\\"]{--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-rotate:60deg;transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[transform=\\"\\"]{transform:translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z)) rotate(var(--un-rotate)) rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y)) rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z));}
[border~=\\"\\\\32 \\"]{border-width:2px;border-style:solid;}
[border~=\\"x-1\\"]{border-left-width:1px;border-right-width:1px;border-left-style:solid;border-right-style:solid;}
[border~=\\"blue-200\\"]{--un-border-opacity:1;border-color:rgba(191,219,254,var(--un-border-opacity));}
[border~=\\"rounded-xl\\"]{border-radius:0.75rem;}
[border~=\\"rounded\\"]{border-radius:0.25rem;}
[rounded-sm=\\"\\"]{border-radius:0.125rem;}
[border~=\\"x-style-dashed\\"]{border-left-style:dashed;border-right-style:dashed;}
.dark [bg~=\\"dark\\\\:\\\\!blue-500\\"]{--un-bg-opacity:1 !important;background-color:rgba(59,130,246,var(--un-bg-opacity)) !important;}
.dark [bg~=\\"dark\\\\:hover\\\\:blue-600\\"]:hover{--un-bg-opacity:1;background-color:rgba(37,99,235,var(--un-bg-opacity));}
[bg~=\\"blue-400\\"]{--un-bg-opacity:1;background-color:rgba(96,165,250,var(--un-bg-opacity));}
[bg~=\\"hover\\\\:blue-500\\"]:hover{--un-bg-opacity:1;background-color:rgba(59,130,246,var(--un-bg-opacity));}
[bg~=\\"hover\\\\:sky-500\\"]:hover{--un-bg-opacity:1;background-color:rgba(14,165,233,var(--un-bg-opacity));}
[bg~=\\"sky-400\\"]{--un-bg-opacity:1;background-color:rgba(56,189,248,var(--un-bg-opacity));}
[bg~=\\"transparent\\"]{background-color:transparent;}
[important~=\\"bg-red\\"]{--un-bg-opacity:1 !important;background-color:rgba(248,113,113,var(--un-bg-opacity)) !important;}
[p~=\\"t-2\\"],
[pt~=\\"\\\\32 \\"],
[pt2=\\"\\"]{padding-top:0.5rem;}
[font~=\\"mono\\"]{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,\\"Liberation Mono\\",\\"Courier New\\",monospace;}
[font~=\\"sans\\"]{font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\";}
[text~=\\"sm\\"]{font-size:0.875rem;line-height:1.25rem;}
[important~=\\"text-red\\"]{--un-text-opacity:1 !important;color:rgba(248,113,113,var(--un-text-opacity)) !important;}
[text~=\\"white\\"]{--un-text-opacity:1;color:rgba(255,255,255,var(--un-text-opacity));}
[after~=\\"content-\\\\[quoted\\\\:uno-css\\\\]\\"]::after{content:\\"uno-css\\";}
@media (min-width: 640px){
[sm~=\\"\\\\[color\\\\:red\\\\]\\"]{color:red;}
}
@media (min-width: 768px){
[md~=\\"\\\\[--var\\\\:var\\\\(--another\\\\)\\\\]\\"]{--var:var(--another);}
}
@media (min-width: 1024px){
[lg~=\\"bg-blue-600\\"]{--un-bg-opacity:1;background-color:rgba(37,99,235,var(--un-bg-opacity));}
}"
`;

exports[`attributify > variant 1`] = `
[
  "uno-layer-base-c-white/10",
  "hover:uno-layer-base-c-black/20",
  "sm-[color:red]",
  "md-[--var:var(--another)]",
  "lg-bg-blue-600",
  undefined,
  undefined,
  "important-text-red",
  "important-bg-red",
  "bg-blue-400",
  "hover:bg-blue-500",
  "dark:!bg-blue-500",
  "dark:hover:bg-blue-600",
  "text-sm",
  "text-white",
  "!leading-4",
  "!flex",
  "flex-col",
  "p-t-2",
  "pt-2",
  "border-rounded-xl",
  "border-x-1",
  "border-x-style-dashed",
  "font-mono",
  "font-sans",
  "p-y-2",
  "p-x-4",
  "border-2",
  "border-rounded",
  "border-blue-200",
  "children-m-auto",
  "pt2",
  "rounded-sm",
  "inline-block",
  "transform",
  "translate-x-100%",
  "translate-y-",
  "%",
  "rotate-30",
  "after-content-[quoted:uno_css]",
  "rotate-60",
  "ma",
  "m-1",
  "m-2",
  "m-3",
  "ml-1.5",
  "ml-1..6",
]
`;
